reverse-proxy/obsidian-livesync/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: couchdb-service # needs to match Service name
subsets:
  - addresses:
      - ip: 192.168.0.15 # CouchDB LXC on pve4
    ports:
      - name: http
        port: 5984
        protocol: TCP
