reverse-proxy/obsidian-livesync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb-service # needs to match endpoint name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5984
      targetPort: 5984
